--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,3 +39,4 @@ jobs:
           bundle exec rails db:create
           bundle exec rails db:migrate
           bundle exec rails test
+          bundle exec rails test:system
